force-app/main/default/objects/TrackIT__Extinguisher_Inspection_Transaction__c/TrackIT__Extinguisher_Inspection_Transaction__c.object-meta.xml
<CustomObject>
    <description>Stores fire extinguisher inspection transaction information in Facility Manager</description>
    <label>Extinguisher Inspection Transaction</label>
    <nameField>
        <label>Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extinguisher Inspection Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>