force-app/main/default/objects/TrackIT__Extinguisher_Inspection_Transaction__c/fields/TrackIT__Date_Time__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Date_Time__c</fullName>
    <description>Date and Time on which inspection was completed</description>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>