force-app/main/default/objects/TrackIT__Extinguisher_Inspection_Transaction__c/fields/TrackIT__Inspection_Cycle__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspection_Cycle__c</fullName>
    <label>Inspection Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Five Year</fullName>
            </value>
            <value>
                <fullName>Six Year</fullName>
            </value>
            <value>
                <fullName>Ten Year</fullName>
            </value>
            <value>
                <fullName>Twelve Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>