force-app/main/default/objects/TrackIT__Extinguisher_Inspection_Transaction__c/fields/TrackIT__Inspection_Result__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspection_Result__c</fullName>
    <label>Inspection Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>