force-app/main/default/objects/TrackIT__Extinguisher_Inspection_Transaction__c/fields/TrackIT__Inspection_Tasks__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Inspection_Tasks__c</fullName>
    <label>Inspection Tasks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TrackIT__Extinguisher_Inspection_Tasks</valueSetName>
    </valueSet>
</CustomField>