force-app/main/default/objects/TrackIT__Extinguisher_Inspection_Transaction__c/fields/TrackIT__Item__c.field-meta.xml
<CustomField>
    <fullName>TrackIT__Item__c</fullName>
    <description>Fire Extinguisher Inspection Transactions Detail Part of the Relationship</description>
    <label>Item</label>
    <referenceTo>TrackIT__Item__c</referenceTo>
    <relationshipLabel>Extinguisher Inspection Transactions</relationshipLabel>
    <relationshipName>Extinguisher_Inspection_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>