force-app/main/default/objects/TrackIT__Extinguisher_Inspection_Transaction__c/listViews/TrackIT__All.listView-meta.xml
<ListView>
    <fullName>TrackIT__All</fullName>
    <columns>NAME</columns>
    <columns>TrackIT__Item__c</columns>
    <columns>TrackIT__Date_Time__c</columns>
    <columns>TrackIT__Inspection_Cycle__c</columns>
    <columns>TrackIT__Inspection_Result__c</columns>
    <columns>TrackIT__Inspection_Tasks__c</columns>
    <columns>TrackIT__Notes__c</columns>
    <columns>TrackIT__Weight__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>